--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(255, 255, 165);
-    font-family:Verdana, Geneva, Tahoma, sans-serif
+    background-color: rgb(255, 255, 255);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 
 }
 
