--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,7 @@ body {
 .link-button {
     text-decoration: none;
     color: black;
-    border: 1px solid gray;
-    background-color: #f2f2f2;
+    background-color: hsl(64, 100%, 83%);
     padding: 5px;
     border-radius: 5px;
-    box-shadow: 2px 3px #888888;
 }
